trunk/Archive2/01/804aeab9770ef6/output
main.cpp: In function 'int main()':
main.cpp:8:29: error: invalid use of incomplete type 'struct s<16>'
     s<alignof(max_align_t)>();
                             ^
main.cpp:3:22: error: declaration of 'struct s<16>'
 template<int> struct s;
                      ^
